--- a/Client/project.config.json
+++ b/Client/project.config.json
@@ -12,8 +12,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.98",
-	"appid": "touristappid",
-	"projectname": "testB",
+	"appid": "wxf56f3b8dbca9bfee",
+	"projectname": "Collection",
 	"condition": {
 		"search": {
 			"current": -1,
