--- a/Client/app.json
+++ b/Client/app.json
@@ -1,33 +1,37 @@
 {
-  "pages":[
-    "pages/index/index",
+  "pages": [
+    "pages/detail/detail",
     "pages/login/login",
-    "pages/logs/logs"
+    "pages/help/help",
+    "pages/index/index",
+    "pages/logs/logs",
+    "pages/recycable/recycable",
+    "pages/collection/collection"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
-    "backgroundColor":"#fff",
+  "window": {
+    "backgroundTextStyle": "light",
+    "backgroundColor": "#fff",
     "navigationBarBackgroundColor": "#444",
     "navigationBarTitleText": "Collection 社区",
-    "navigationBarTextStyle":"white",
-    "enablePullDownRefresh":true
+    "navigationBarTextStyle": "white",
+    "enablePullDownRefresh": true
   },
-  "tabBar":{
-    "color":"#444",
-    "selectedColor":"#80bd01",
-    "backgroundColor":"#fff",
-    "borderStyle":"white",
-    "list":[{
-      "pagePath":"pages/index/index",
-      "text":"首页",
-      "iconPath":"images/bar/CNode.png",
-      "selectedIconPath":"images/bar/CNodeHL.png"
-    },
-    {
-      "pagePath": "pages/login/login",
-      "text": "设置",
-      "iconPath": "images/bar/ME.png",
-      "selectedIconPath": "images/bar/MEHL.png"
-    }]
+  "tabBar": {
+    "selectedColor": "#43ce7b",
+    "position": "bottom",
+    "list": [
+      {
+        "pagePath": "pages/detail/detail",
+        "text": "首页",
+        "iconPath": "images/bar/home.png",
+        "selectedIconPath": "images/bar/home_active.png"
+      },
+      {
+        "pagePath": "pages/index/index",
+        "text": "我的",
+        "iconPath": "images/bar/me.png",
+        "selectedIconPath": "images/bar/me_active.png"
+      }
+    ]
   }
 }
